<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:id="@+id/lvl1"
        android:defaultValue="true"
        android:icon="@drawable/vectorpaint_white"
        android:key="@string/key_lvl_1"
        android:summary="@string/lvl1"
        android:summaryOff="Hidden"
        android:title="@string/settings_title1" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/vectorpaint_yellow"
        android:key="@string/key_lvl_2"
        android:summary="@string/lvl2"
        android:summaryOff="Hidden"
        android:title="Gelb" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/vectorpaint_green"
        android:key="@string/key_lvl_3"
        android:summary="@string/lvl3"
        android:summaryOff="Hidden"
        android:title="Grün" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/vectorpaint_blue"
        android:key="@string/key_lvl_4"
        android:summary="@string/lvl4"
        android:summaryOff="Hidden"
        android:title="Blau" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/vectorpaint_red"
        android:key="@string/key_lvl_5"
        android:summary="@string/lvl5"
        android:summaryOff="Hidden"
        android:title="Rot" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/vectorpaint_black"
        android:key="@string/key_lvl_6"
        android:summary="@string/lvl6"
        android:summaryOff="Hidden"
        android:title="Schwarz" />
</PreferenceScreen>