<?xml version="1.0" encoding="utf-8"?><!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to adtaskEntrytask name, and buttons to select a priority
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- EditText for getttaskEntrytask name input -->
    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_task_description"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="StoneColor" />

    <Spinner
        android:id="@+id/spinner_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="From:" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="To:" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/priority_string"
        android:textColor="@android:color/primary_text_light" />

        <!-- RadioGroup for visible selection of a priority -->
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/radButton1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/materialWhite"
                android:checked="true"
                android:text="@string/lvl1"
                android:theme="@style/WhiteRadioButton" />

            <RadioButton
                android:id="@+id/radButton2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialYellow"
                android:text="@string/lvl2"
                android:theme="@style/WhiteRadioButton" />

            <RadioButton
                android:id="@+id/radButton3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialGreen"
                android:text="@string/lvl3"
                android:theme="@style/WhiteRadioButton" />

            <RadioButton
                android:id="@+id/radButton4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialBlue"
                android:text="@string/lvl4"
                android:theme="@style/WhiteRadioButton" />

            <RadioButton
                android:id="@+id/radButton5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialRed"
                android:text="@string/lvl5"
                android:theme="@style/WhiteRadioButton" />

            <RadioButton
                android:id="@+id/radButton6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialBlack"
                android:text="@string/lvl6"
                android:theme="@style/WhiteRadioButton" />

        </RadioGroup>

    <!-- Add button -->
    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/add_button"
        android:textColor="@android:color/primary_text_dark" />

</LinearLayout>